--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'com.google.code.gson:gson:2.8.6'
-
+/*
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'*/
 
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.theartofdev.edmodo:android-image-cropper:2.7.0'
@@ -67,6 +67,7 @@ dependencies {
     implementation "com.airbnb.android:lottie:$lottieVersion"
 
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
 }
 apply plugin: 'com.google.gms.google-services'
