--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,5 +69,7 @@ dependencies {
     implementation 'com.github.chrisbanes:PhotoView:2.1.3'
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    implementation 'com.android.volley:volley:1.1.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
